# mm-staking

./: Anchor.toml  DEPLOY.md  LICENSE  README.md  build.sh  coverage-summary.txt  package-lock.json  package.json
dist-client/: mm_staking.json
programs/mm-staking/: Cargo.toml
programs/mm-staking/src/: constants.rs  errors.rs  lib.rs  logic.rs  math.rs  state.rs  update.rs
programs/mm-staking/src/instructions/: add_reward.rs  admin.rs  claim.rs  deposit_rewards.rs  emergency_withdraw.rs  initialize_pool.rs  mod.rs  stake.rs
scripts/: export-idl.sh
tests/: admin.test.ts  claim.test.ts  deposit.test.ts  emergency.test.ts  helpers.ts  initialize.test.ts  invariants.test.ts  mm-staking.ts  rewards.test.ts  smoke.test.ts  stake.test.ts
