[package]
name = "mm-staking"
version = "0.1.0"
description = "Single-sided MM staking with multi-bluechip streaming rewards"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mm_staking"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
init-if-needed = ["anchor-lang/init-if-needed"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
# Required: anchor 0.31.1 `#[zero_copy]` derives `bytemuck::Pod`/`Zeroable` against the
# `bytemuck` crate path directly, so it must be a direct dependency.
bytemuck = { version = "1", features = ["derive"] }
# Embeds a security.txt section in the program binary so explorers show contact/policy.
solana-security-txt = "1.1.1"

[dev-dependencies]
# pure math unit tests need nothing extra
